--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1969,8 +1969,7 @@ ul.icons {
       margin-bottom: 0; }
   #banner h1 {
     font-size: 4rem;
-    margin-bottom: 1rem;
-    margin-right: 50%; }
+    margin-bottom: 1rem; }
   #banner p {
     font-size: 1.5rem; }
   #banner a {
@@ -2011,7 +2010,7 @@ ul.icons {
     width: 100%;
     z-index: 1; }
   #banner:after {
-    background: linear-gradient(135deg, #ce1b28 0%, #111111 74%);
+    background: linear-gradient(135deg, #891BEA 0%, #FFFFFF 95%);
     content: ' ';
     display: block;
     height: 100%;
@@ -2019,7 +2018,6 @@ ul.icons {
     opacity: 0.6;
     position: absolute;
     top: 0;
-    webkit-linear-gradientidth: 100%;
     width: 100%;
     z-index: 1; }
   #banner.small {
